# Apelsin

./: About.hs  Apelsin.hs  ClanFetcher.hs  Clanlist.hs  Config.hs  Constants.hs  FilterBar.hs  FindPlayers.hs  GtkUtils.hs  Helpers.hs  InfoBox.hs  Preferences.hs  README.md  STM2.hs  ServerBrowser.hs  ServerInfo.hs  Toolbar.hs  TremFormatting.hs  Types.hs  apelsin.cabal  genicons.sh  installicons.sh
System/Environment/XDG/: BaseDir.hs
share/: open.js
share/applications/: apelsin.desktop
src/: About.hs  Apelsin.hs  AutoRefresh.hs  ClanFetcher.hs  Clanlist.hs  ConcurrentUtil.hs  Config.hs  Constants.hs  Exception2.hs  Favorites.hs  FilterBar.hs  FindPlayers.hs  GtkExts.hs  GtkUtils.hs  IndividualServerSettings.hs  InfoBox.hs  List2.hs  Monad2.hs  NumberSerializer.hs  OnlineClans.hs  Preferences.hs  STM2.hs  ServerBrowser.hs  ServerInfo.hs  SettingsDialog.hs  Toolbar.hs  TremFormatting.hs  Types.hs
src/System/Environment/XDG/: BaseDir.hs
