Name:                   apelsin
Version:                1
Author:                 Christoffer Öjeling
Maintainer:             cadynum@gmail.com
License:                GPL
License-File:           LICENSE
Category:               Network
Synopsis:               A server and community browser for the game Tremulous
Description:            Placeholder....

Cabal-Version:          >= 1.10
Build-Type:             Simple
data-dir:               share
Tested-With:            GHC==7.0.2


Executable apelsin
  Default-Language:     Haskell2010
  Default-Extensions:   BangPatterns NamedFieldPuns RecordWildCards
                        StandaloneDeriving
                        GeneralizedNewtypeDeriving FlexibleInstances FlexibleContexts
                        TypeSynonymInstances ScopedTypeVariables OverloadedStrings
  Build-Depends:        base>=4.3, array, old-time, network, mtl, stm, deepseq, containers, strict-concurrency,
                        bytestring, attoparsec, directory, filepath, HTTP, tremulous-query, gtk, glib, process,
                        transformers

  Main-is:              Apelsin.hs                
  Other-Modules:        About
                        ClanFetcher
                        Clanlist
                        Config
                        Constants
                        FilterBar
                        FindPlayers
                        GtkUtils
                        Helpers
                        InfoBox
                        Preferences
                        ServerBrowser
                        ServerInfo
                        Setup
                        STM2
                        TremFormatting
  Ghc-Options:          -Wall -threaded -fno-warn-unused-do-bind -funbox-strict-fields
