Name:                   apelsin
Version:                1.0
Author:                 Christoffer Öjeling
Maintainer:             cadynum@gmail.com
License:                GPL-3
License-File:           LICENSE
Category:               Network
Synopsis:               A server and community browser for the game Tremulous
Description:            Placeholder....

Cabal-Version:          >= 1.10
Build-Type:             Simple
data-dir:               share
Tested-With:            GHC==7.0.3


Executable apelsin
  Default-Language:     Haskell2010
  Default-Extensions:   BangPatterns NamedFieldPuns RecordWildCards
                        ScopedTypeVariables OverloadedStrings
  Other-Extensions:     CPP
  Build-Depends:        base>=4.3, array, mtl, stm, deepseq, containers, transformers,
                        bytestring, directory, filepath, HTTP, network,
                        tremulous-query, gtk, glib, process
                       
  Main-is:              Apelsin.hs
  Other-Modules:        System.Environment.XDG.BaseDir
                        About
                        ClanFetcher
                        Clanlist
                        Config
                        Constants
                        FilterBar
                        FindPlayers
                        GtkUtils
                        InfoBox
                        List2
                        Paths_apelsin
                        Preferences
                        ServerBrowser
                        ServerInfo
                        STM2
                        Toolbar
                        TremFormatting
                        Types
  if os(windows)               
    Ghc-Options: -Wall -threaded -fno-warn-unused-do-bind -funbox-strict-fields
  else
    Ghc-Options: -optl-mwindows -Wall -threaded -fno-warn-unused-do-bind -funbox-strict-fields
