Name:                   apelsin
Version:                1.0
Author:                 Christoffer Öjeling
Maintainer:             cadynum@gmail.com
License:                GPL-3
License-File:           LICENSE
Category:               Network
Synopsis:               A server and community browser for the game Tremulous
Description:            Placeholder....

Cabal-Version:          >= 1.10
Build-Type:             Simple
Data-Dir:               data
Data-Files:             *.png
Tested-With:            GHC==7.0.3


Flag relativePath
  description: Use relative paths for data files instead of cabal defaults
  default:     False



Executable apelsin
  Default-Language:     Haskell2010
  Default-Extensions:   BangPatterns NamedFieldPuns RecordWildCards
                        ScopedTypeVariables OverloadedStrings
  Other-Extensions:     CPP
  Build-Depends:        base>=4.3, array, mtl, stm, containers, transformers,
                        bytestring, directory, filepath, HTTP, network,
                        tremulous-query, gtk, glib, process

  Main-is:              Apelsin.hs
  Other-Modules:        System.Environment.XDG.BaseDir
                        About
                        ClanFetcher
                        Clanlist
                        Config
                        Constants
                        FilterBar
                        FindPlayers
                        GtkUtils
                        InfoBox
                        List2
                        Preferences
                        ServerBrowser
                        ServerInfo
                        STM2
                        Toolbar
                        TremFormatting
                        Types
                        Paths_apelsin
                          
  Ghc-Options:         -Wall -threaded -fno-warn-unused-do-bind -funbox-strict-fields
  
  if !flag(relativePath)
    cpp-options: -DCABAL_PATH

  if os(windows)
    ld-options: -mwindows
   
